--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    
    <h1> Nika's Website </h1>
    
+   <center> <img src="Nika's Personal Artifact.jpg" alt="width="600"> <center>
    
   </body>
   
