add embedded scratch game

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
    
    <h1> Nika's Website </h1>
    
+   <iframe src="https://scratch.mit.edu/projects/425917327/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+   
    <center> <img src="Nika's Personal Artifact.jpg" alt="width="600"> <center>
    
   </body>
