--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    
    
    <u1>
-     <li><a href="index.html"> Home </a> </li>
-     <li><a href="apps.html"> Home </a> </li>
-     <li><a href="#art"> Home </a> </li>
+     <1i><a href="index.html"> Home </a> </li>
+     <1i><a href="apps.html"> Home </a> </li>
+     <1i><a href="#art"> Home </a> </li>
      
    </u1>
    
