Update and rename games.html to art.html

--- a/art.html
+++ b/art.html
@@ -2,12 +2,12 @@
 
 <body>
 
-<u1>
+<ul>
 <1i><a href="index.html"> Home </a> </1i>
-<1i><a href="#apps"> Home </a> </1i>
-<1i><a href="#art"> Home </a> </1i>
+<1i><a href="apps.html"> Apps </a> </1i>
+<1i><a href="#art"> Art </a> </1i>
 
-</u1>
+</ul>
 
 </body>
 
