--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <ul>
      <1i><a href="index.html"> Home </a> </li>
      <1i><a href="apps.html"> Apps </a> </li>
-     <1i><a href="#art"> Art </a> </li>
+     <1i><a href="art.html"> Art </a> </li>
      
    </ul>
    
