--- a/apps.html
+++ b/apps.html
@@ -4,7 +4,7 @@
 <ul>
 <1i><a href="index.html"> Home </a> </1i>
 <1i><a href="apps.html"> Apps </a> </1i>
-<1i><a href="#art"> Art </a> </1i>
+<1i><a href="art.html"> Art </a> </1i>
 
 </ul>
 
