--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
  <body>
    
    
-   <ul>
-     <1i><a href="index.html"> Home </a> </li>
-     <1i><a href="apps.html"> Apps </a> </li>
-     <1i><a href="#art.html"> Art </a> </li>
+   <ul class="nav">
+     <li class="nav"> <a href="index.html"> Home </a></li>
+     <li class="nav"> <a href="apps.html"> Apps </a></li>
+     <li class="nav"> <a href="art.html"> Art </a></li>
      
    </ul>
    
