--- a/art.html
+++ b/art.html
@@ -2,10 +2,10 @@
 
 <body>
 
-<ul>
-<1i><a href="index.html"> Home </a> </1i>
-<1i><a href="apps.html"> Apps </a> </1i>
-<1i><a href="art.html"> Art </a> </1i>
+<ul class="nav">
+     <li class="nav"> <a href="index.html"> Home </a></li>
+     <li class="nav"> <a href="apps.html"> Apps </a></li>
+     <li class="nav"> <a href="art.html"> Art </a></li>
 
 </ul>
 
