--- a/art.html
+++ b/art.html
@@ -4,8 +4,8 @@
 
 <ul class="nav">
      <li class="nav"> <a href="index.html"> Home </a></li>
-     <li class="nav"> <a href="apps.html"> Apps </a></li>
-     <li class="nav"> <a href="art.html"> Art </a></li>
+     <li class="nav"> <a href="#apps"> Apps </a></li>
+     <li class="nav"> <a href="#art"> Art </a></li>
 
 </ul>
 
