--- a/art.html
+++ b/art.html
@@ -4,8 +4,8 @@
 
 <ul class="nav">
      <li class="nav"> <a href="index.html"> Home </a></li>
-     <li class="nav"> <a href="#apps"> Apps </a></li>
-     <li class="nav"> <a href="#art"> Art </a></li>
+     <li class="nav"> <a href="apps.html"> Apps </a></li>
+     <li class="nav"> <a href="art.html"> Art </a></li>
 
 </ul>
 
@@ -34,13 +34,13 @@ font-size: 17px
 }
 
 .topnav a:hover {
-background-color: #ffffff
-color: white;
+background-color: #cc614b
+color: salmon;
 }
 
 .topnav a.active {
-background-color: #339eb4
-color: white;
+background-color: #cc614b
+color: salmon;
 }
 
 </style>
