--- a/apps.html
+++ b/apps.html
@@ -1,11 +1,11 @@
 <html>
 
 <body>
-<ul> 
-     <li><a href="index.html"> Home </a> </li>
-     <li><a href="apps.html"> Apps </a> </li>
-     <li><a href="#art"> Art </a> </li>
-
+<ul>
+    <li class="navbar"> <a href="#home"> Home </a></li>
+    <li class="navbar"> <a href="apps.html"> Apps Items</li>
+    <li class="navbar"><a href="art.html"> Art </li>
+   
 </ul>
 
 <br>
