--- a/art.html
+++ b/art.html
@@ -2,10 +2,10 @@
 
 <body>
 
-<ul class="nav">
-     <li class="nav"> <a href="index.html"> Home </a></li>
-     <li class="nav"> <a href="apps.html"> Apps </a></li>
-     <li class="nav"> <a href="art.html"> Art </a></li>
+<ul>
+     <li><a href="index.html"> Home </a></li>
+     <li><a href="apps.html"> Apps </a></li>
+     <li><a href="art.html"> Art </a></li>
 
 </ul>
 
