--- a/apps.html
+++ b/apps.html
@@ -2,9 +2,9 @@
 
 <body>
 <ul>
-    <li class="navbar"> <a href="#home"> Home </a></li>
-    <li class="navbar"> <a href="apps.html"> Apps Items</li>
-    <li class="navbar"><a href="art.html"> Art </li>
+     <li><a href="index.html"> Home </a></li>
+     <li><a href="apps.html"> Apps </a></li>
+     <li><a href="art.html"> Art </a></li>
    
 </ul>
 
