--- a/apps.html
+++ b/apps.html
@@ -27,7 +27,7 @@
    margin: 0;
    padding: 0;
    overflow: hidden;
-   backgroud-color: #FFFBFF;
+   backgroud-color: #db37db;
      }
      
      li {
