--- a/art.html
+++ b/art.html
@@ -24,7 +24,7 @@ ul {
    margin: 0;
    padding: 0;
    overflow: hidden;
-   background-color: #FFFBFF;
+   background-color: #a76bcf;
      }
      
      li {
