--- a/apps.html
+++ b/apps.html
@@ -6,6 +6,14 @@
      <li><a href="art.html"> Art </a></li>
 
 </ul>
+     
+<iframe width="400" height="620" style="border: 0px;" scr="https://studio.code.org/projects/applab/I-z7HGzl7UHs9V6DZ9hgCM3JJxoNMdSEMBx5XLhvWRQ"></iframe>
+   <br>
+
+
+       <iframe src="https://scratch.mit.edu/projects/425917327/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+   </center>
 
 </body>
 
