--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <style>
      
  ul {
-   lisy-style-type: none;
+   list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
