--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
+  
   <head>
     <link rel="stylefile" href="style.css">
-    
-    <ttile> Nika Bordbar's Website<.title>
+  
+  </head>
     
   
  <body>
