--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en"
   
   <head>
-    <link rel="stylefile" href="style.css">
+    <link rel="stylesheet" href="style.css">
   
   </head>
     
