--- a/apps.html
+++ b/apps.html
@@ -3,7 +3,7 @@
 <ul>
      <li><a href="index.html"> Home </a></li>
      <li><a href="apps.html"> Apps </a></li>
-     <li><a href="art.html"> Art </a></li>
+     <li><a href="DDP.html"> Digital Design Projects </a></li>
 
 </ul>
      
