--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 
 <html lang="en"
      
- 
+ <head>
   <link rel="stylesheet" href="style.css">
+
+<title> Nika Bordbar's Webiste/title>
+     </head>
 
 
  <body>
